--- a/app/partials/phone-list.html
+++ b/app/partials/phone-list.html
@@ -9,9 +9,7 @@
         <option value="name">Chou</option>
         <option value="age">Jarret</option>
       </select>
-      Texte : <input ng-model="texte" />
-      Email : <input ng-model="email" />
-      <input type="button" class="btn btn-info" ng-click="setEmail('{{email}}', '{{texte}}')" value="Envoyer EMail" />
+      <a href="#/contact/">Laissez nous un message</a>
     </div>
     <div class="col-md-10">
       <!--Body content-->
